<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<artifactId>wls-kernel-parent</artifactId>
		<groupId>de.heuboe.wls</groupId>
		<version>4.5.5</version>
	</parent>
	
	<groupId>de.heuboe.datex2.vms</groupId>
	<artifactId>vms-publication-service</artifactId>
	<version>1.1.8</version>
	<name>VMS-Publication-Service</name>

	<scm>  
		<url>https://gitlab.heuboe.hbintern/Datex2/Vms/vms-publication-service</url>
		<connection>scm:git:git@gitlab.heuboe.hbintern:Datex2/Vms/vms-publication-service.git</connection>
		<developerConnection>scm:git:git@gitlab.heuboe.hbintern:Datex2/Vms/vms-publication-service.git</developerConnection>
    </scm>
    
	<properties>
  		<java.version>11</java.version>
        <additionalparam>-Xdoclint:none</additionalparam>
        
   	  	<heuboe.pdb.skip>false</heuboe.pdb.skip>  
	
		<wls.tcc.version>4.0.3</wls.tcc.version>
		<wls.sdbby.version>4.0.3</wls.sdbby.version>
		<image.service.nrw.version>1.1.2</image.service.nrw.version>
        <datex2.schema.version>1.3.4</datex2.schema.version>
        <datex2.wls.version>0.1.0</datex2.wls.version>
  		<kafka-tools.version>0.1.7</kafka-tools.version>
        
        <!--  VMIS ConfigService  -->
		<cfg-svc-interface.version>1.16.17</cfg-svc-interface.version>
		
        <cfg.service.interface.version>1.2.2</cfg.service.interface.version>
        
		<guava.version>27.0.1-jre</guava.version>
        
        <mainClass>de.heuboe.datex2.vms.service.uz.Main</mainClass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbBase</artifactId>
		</dependency>
			
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
			<artifactId>datex2-schema_2_3</artifactId>
			<version>${datex2.schema.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.jvnet.jaxb2_commons</groupId>
					<artifactId>jaxb2-basics-runtime</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>
		 
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
		 	<artifactId>datex2-wls</artifactId>
			<version>${datex2.wls.version}</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.nrw.guisvc</groupId>
			<artifactId>cfg-service-interface</artifactId>
			<version>${cfg.service.interface.version}</version>
		</dependency>

		<dependency>
		    <groupId>xalan</groupId>
		    <artifactId>xalan</artifactId>
		    <version>2.7.2</version>
			<exclusions>
				<exclusion>
		    		<groupId>xml-apis</groupId>
		   			<artifactId>xml-apis</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>
	    
	    <dependency>
			<groupId>de.heuboe.nrw</groupId>
		 	<artifactId>image-service-nrw</artifactId>
			<version>${image.service.nrw.version}</version>
			<exclusions>
				<exclusion>
		    		<groupId>xml-apis</groupId>
		   			<artifactId>xml-apis</artifactId>
			    </exclusion>
			</exclusions>
	    </dependency>

	    <dependency>
	  		<groupId>com.fasterxml.jackson.core</groupId>
	  		<artifactId>jackson-annotations</artifactId>
	    </dependency>

	    
	    
	   		<!--  WLS -->
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-iface</artifactId>
			<exclusions>
				<exclusion>
				    <groupId>xerces</groupId>
				    <artifactId>xercesImpl</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-lib</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-geo-features</artifactId>
			<exclusions>
				<exclusion>
		    		<groupId>xml-apis</groupId>
		   			<artifactId>xml-apis</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-geo-features-lib</artifactId>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap</artifactId>
			<exclusions>
				<exclusion>
		    		<groupId>xml-apis</groupId>
		   			<artifactId>xml-apis</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-lib</artifactId>
			
			<exclusions>
				<exclusion>
  					<groupId>com.fasterxml.jackson.module</groupId>
  					<artifactId>jackson-module-jaxb-annotations</artifactId>
			    </exclusion>
			</exclusions>
			
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tmc</artifactId>
			<exclusions>
				<exclusion>
				    <groupId>de.heuboe.base</groupId>
				    <artifactId>jddp</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>
	    
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-openlr-plugin</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tcc</artifactId>
			<version>${wls.tcc.version}</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-sdbby</artifactId>
			<version>${wls.sdbby.version}</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.geo</groupId>
			<artifactId>geo-server-grpc</artifactId>
		</dependency>
		
	    
		<!--  CXF  -->

	    <dependency>
	        <groupId>org.apache.cxf</groupId>
	        <artifactId>cxf-tools-common</artifactId>
	    </dependency>		
	    
   		<dependency>
        	<groupId>org.apache.cxf</groupId>
        	<artifactId>cxf-rt-transports-http-jetty</artifactId>
    	</dependency>

   		<dependency>
		    <groupId>org.apache.cxf</groupId>
		    <artifactId>cxf-rt-frontend-jaxws</artifactId>
    	</dependency>
    	
    	
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				
			</exclusions>
		</dependency>
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		  	<groupId>net.devh</groupId>
		  	<artifactId>grpc-client-spring-boot-starter</artifactId>
		  	<version>2.10.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>

		<dependency>
	    	<groupId>de.heuboe.kafka</groupId>
			<artifactId>kafka-tools</artifactId>
			<version>${kafka-tools.version}</version>
	    </dependency>
	    
		<dependency>
			<groupId>de.heuboe.asfinag</groupId>
			<artifactId>vmis2-configservice-interface</artifactId>
			<version>${cfg-svc-interface.version}</version>
		</dependency>


		<dependency>
	        <groupId>de.heuboe.asfinag</groupId>
		    <artifactId>vmis2-kafka-protopojo-converter</artifactId>
		    <version>1.5.1</version>
		</dependency>

		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-stub</artifactId>
			<version>1.29.0</version>
		</dependency>

		<dependency>
	        <groupId>de.heuboe.asfinag</groupId>
		    <artifactId>vmis2-tls-proto-interface</artifactId>
	        <version>3.2.0</version>
		</dependency>

		<dependency>
        	<groupId>de.heuboe.asfinag</groupId>
    		<artifactId>vmis2-jprotoc-transferinterface</artifactId>
	        <version>4.6.1</version>
		</dependency>
		

		<dependency>
		    <groupId>com.google.protobuf</groupId>
		    <artifactId>protobuf-java</artifactId>
		    <version>3.23.0</version>
		</dependency>
		<dependency>
		    <groupId>com.google.protobuf</groupId>
		    <artifactId>protobuf-java-util</artifactId>
		    <version>3.23.0</version>
		</dependency>
		
		
		<!-- others -->
		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>


		<!--  Test  -->

		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbRegressionTest</artifactId>
			<version>0.2.8</version>
			<scope>test</scope>
		</dependency>
	
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            
            <exclusions>
	            <exclusion>
				    <groupId>com.vaadin.external.google</groupId>
				    <artifactId>android-json</artifactId>
	            </exclusion>
            </exclusions>
        </dependency>
        
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-commons</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		  	<groupId>org.junit.jupiter</groupId>
  			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		

	</dependencies>
	
	<build>
		<plugins>
		
			<plugin>
			    <groupId>org.apache.cxf</groupId>
			    <artifactId>cxf-java2ws-plugin</artifactId>
			    <version>${cxf.version}</version>
			    <dependencies>
			        <dependency>
			            <groupId>org.apache.cxf</groupId>
			            <artifactId>cxf-rt-frontend-jaxws</artifactId>
			            <version>${cxf.version}</version>
			        </dependency>
			        <dependency>
			            <groupId>org.apache.cxf</groupId>
			            <artifactId>cxf-rt-frontend-simple</artifactId>
			            <version>${cxf.version}</version>
			        </dependency>
			    </dependencies>

			    <executions>
			        <execution>
			            <id>process-classes</id>
			            <phase>process-classes</phase>
			            <configuration>
			                <className>de.heuboe.datex2.vms.service.VMSService</className>
			                <genWsdl>true</genWsdl>
			                <verbose>true</verbose>
			            </configuration>
			            <goals>
			                <goal>java2ws</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>  
			<plugin>
			  <artifactId>maven-resources-plugin</artifactId>
			  <version>2.5</version>
			  <executions>
			    <execution>
			      <id>copy-resources</id>
			      <phase>process-classes</phase>
			      <goals>
			        <goal>copy-resources</goal>
			      </goals>
			      <configuration>
			        <outputDirectory>${project.build.outputDirectory}</outputDirectory>
			        <resources>          
			          <resource>
			            <directory>${basedir}/target/generated</directory>
			            <filtering>false</filtering>
			          </resource>
			        </resources>              
			      </configuration>            
			    </execution>
			  </executions>
			</plugin>
			
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<executions>
					<!-- Optional -->
					<!-- Build a tar file to allow local inspection -->
					<execution>
						<id>docker-build-tar</id>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
					<!-- Required -->
					<!-- Upload the image to the registry -->
					<execution>
						<id>docker-build</id>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<from>
						<!-- ${docker.registry} is set via settings.xml 
						<image>${docker.registry}/adoptopenjdk/openjdk11:alpine-jre</image>
						-->
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
					</from>
					<to>
						<!-- This change is important -->
						<image>${docker.registry}/heuboe/datex2/vms/${project.artifactId}:${project.version}</image>
					</to>
					<container>
						<jvmFlags>
							<!-- Flags für Spring -->
							<jvmFlag>-Dorg.apache.cxf.stax.maxChildElements=500000</jvmFlag>
							<jvmFlag>-Dio.grpc.internal.DnsNameResolverProvider.enable_grpclb=true</jvmFlag>
							<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>-Dlogging.config=/config/log4j2.xml</jvmFlag>
							<jvmFlag>-Dspring.config.location=file:/config/</jvmFlag>
							<!-- Do not add flags such as -Xmx2G or other parameters here that 
								might be changed later on -->
						</jvmFlags>
						<mainClass>${mainClass}</mainClass>
						<ports>
							<!-- Ports with their function -->
							<port>8080</port><!-- actuator -->
							<port>9898</port><!-- grpc -->
							<port>8085</port><!-- wls -->
							<port>4916</port><!-- geo -->
						</ports>
						<labels>
							<version>${project.version}</version>
							<build.timestamp>${maven.build.timestamp}</build.timestamp>
							<!-- Metadata-derived from the git-commit-id-plugin -->
							<git.tags>${git.tags}</git.tags>
							<git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
							<git.commit.timestamp>${git.commit.time}</git.commit.timestamp>
						</labels>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<filesModificationTime>${git.commit.time}</filesModificationTime>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<skipPoms>false</skipPoms>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat><!-- Required for dockering -->
					<dateFormatTimeZone>UTC</dateFormatTimeZone><!-- Required for dockering -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
					<excludeProperties>
						<!-- Requested to be excluded by colleague -->
						<excludeProperty>.*\.user\..*</excludeProperty>
						<!-- same here and we already have other build information files -->
						<excludeProperty>.*\.build\..*</excludeProperty>
					</excludeProperties>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>
											jacoco-maven-plugin
										</artifactId>
										<versionRange>
											[0.7.4.201502262128,)
										</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.cxf
										</groupId>
										<artifactId>
											cxf-java2ws-plugin
										</artifactId>
										<versionRange>
											[${cxf.version},)
										</versionRange>
										<goals>
											<goal>java2ws</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
